--- a/Blogs/cleaning-companies/style.css
+++ b/Blogs/cleaning-companies/style.css
@@ -24,7 +24,7 @@
 
 @font-face {
     font-family: "Lama-sans";
-    src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
+    src: url("/assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
 }
 
 body {
