--- a/Blogs/cleanliness-in-the-Gulf/style.css
+++ b/Blogs/cleanliness-in-the-Gulf/style.css
@@ -8,7 +8,7 @@
         }
           @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
+            src: url("/assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
           
 
         }
