change color in furniture-arrangement

--- a/blogs/fire-fighting/style.css
+++ b/blogs/fire-fighting/style.css
@@ -11,7 +11,7 @@
              font-family: "Lama-sans";
         }
         .gradient-bg {
-            background: #590d3d;
+            background: #153052;
         }
         .fire-animation {
             animation: none;
