--- a/blogs/furniture-moving-in-the-Gulf/style.css
+++ b/blogs/furniture-moving-in-the-Gulf/style.css
@@ -319,7 +319,7 @@
         }
         
         /* .stats-box {
-            background-color: #590d3d;
+            background-color: #153052;
             color: white;
             padding: 1.5em;
             margin: 1.5em 0;
